# senarvi-personal

./: README.md
3ds-convert/: 3ds2cpp.cc  3ds2dat.cc  Makefile  asc2asm.cc
Audioplanet/: .cdtbuild  .cdtproject  .cproject  .project  .project_initial  preferences  preferences_user
Audioplanet/dependencies/gtkmmext/: .cvsignore  Makefile.am  auto_spin.cc  autogen.sh  choice.cc  click_box.cc  configure.ac  controller.cc  databox.gen_h  gdkutils.c  generic_motion_feedback.cc  gtk_ellipsoid.cc  gtk_ui.cc  gtkdatabox.c  gtkdatabox.h  gtklevelhold.c  gtkmarkedcurve.c  gtkmmext-config.in  gtkpixscrollbar.c  gtkrgb.c  gtktransparency.c  gtkutils.c  hexentry.cc  led.cc  levelhold.gen_h  libgtkmmext.pc.in  libgtkmmext.spec.in  marked_curve.gen_h  motionfeedback.cc  pix.cc  pixmap_button.cc  popup.cc  popup_selector.cc  prompter.cc  rgb.gen_h  selector.cc  shaped_window.cc  slider_controller.cc  spinner.cc  textviewer.cc  (+3 more)
Audioplanet/dependencies/gtkmmext/gtkmmext/: .cvsignore  Makefile.am  auto_spin.h  choice.h  click_box.h  controller.h  databox.h  gdkutils.h  generic_motion_feedback.h  gtk_ellipsoid.h  gtk_ui.h  gtkdatabox.h  gtklevelhold.h  gtkmarkedcurve.h  gtkpixscrollbar.h  gtkrgb.h  gtktransparency.h  gtkutils.h  hexentry.h  led.h  motionfeedback.h  pb_from_button.h  pix.h  pixmap_button.h  popup.h  popup_selector.h  prompter.h  selector.h  shaped_window.h  slider_controller.h  spinner.h  stop_signal.h  textviewer.h  utils.h  version.h
Audioplanet/dependencies/gtkmmext/gtkmmext/private/: .cvsignore  Makefile.am
Audioplanet/dependencies/midi++/: .cvsignore  Makefile.am  autogen.sh  configure.ac  fd_midiport.cc  fifomidi.cc  irix_rawmidi.cc  libmidi++.pc.in  midi++-config.in  midi.cc  midi.m4  midichannel.cc  midicontrollable.cc  midifactory.cc  midimanager.cc  midiparser.cc  midiport.cc  miditrace.cc  mmc.cc  mmctest.cc  port_request.cc  version.cc.in
Audioplanet/dependencies/midi++/midi++/: Makefile.am  alsa_rawmidi.h  channel.h  controllable.h  factory.h  fd_midiport.h  fifomidi.h  irix_rawmidi.h  manager.h  mmc.h  nullmidi.h  oss_rawmidi.h  parser.h  port.h  port_request.h  solaris_rawmidi.h  types.h  types.h.in  version.h
Audioplanet/dependencies/pbd/: .cvsignore  Makefile.am  basename.cc  configure.ac  cxx_strdup.cc  dmalloc.cc  ellipsoid.cc  forkexec.cc  irix_platform.cc  language_guru.cc  libpbd.spec.in  linux_platform.cc  mountpoint.cc  parser.cc  pathscanner.cc  pbd-config.in  platform_factory.cc  pool.cc  precision_timer.cc  pthread_spinlock.cc  pthread_utils.cc  rdtsc.m4  receiver.cc  restartable_rw.cc  ringbuffer.cc  rt.cc  rtsched.m4  rtthread.cc  selectable.cc  smp.m4  solaris_platform.cc  strsub.cc  textreceiver.cc  thread.cc  transmitter.cc  undo.cc  unescape.cc  unique_args.m4  version.cc.in  xml++.cc
Audioplanet/dependencies/pbd/pbd/: Makefile.am  abstract_ui.h  atomic.h  basename.h  compose.h  config.h.in  cycles.h  datum.h  ellipsoid.h  error.h  failed_constructor.h  fastlog.h  foreach.h  forkexec.h  irix_platform.h  language_guru.h  linux_platform.h  lock_free_fifo.h  lockmonitor.h  mountpoint.h  parser.h  pathscanner.h  platform.h  platform_factory.h  pool.h  position.h  precision_timer.h  pthread_spinlock.h  pthread_utils.h  rcpointer.h  receiver.h  relation.h  restartable_rw.h  ringbuffer.h  rt.h  rtthread.h  scale.h  selectable.h  solaris_platform.h  stl_delete.h  (+12 more)
Chekov/: .classpath  .project  GEOKOORD.txt  checkout_geotools  gps.cfg  makemaplist  makemaplist.pl  maplist.txt
Rock/: .cdtbuild  .cproject  .project  .project_initial  asm.h  graphics.h  graphics.s  graphics2.cc  hardware.h  init.cc  init.h  main.cc  main.h  math.h  math.s  object.cc  object.h  rock.asc  rock.cc  rock.h  shade.cc  shade.h  sin.h  sin.s  types.h  vector.h  vector.s
demo/: Makefile  _math.h  bios.inc  bump_a.asm  bump_c.cc  bumpmap.h  bumpmap.inc  data.h  data.inc  data2_a.s  data_a.s  declare.S  dma.inc  dos.inc  dpmi.h  dpmi.inc  dpmi_a.asm  fixed.h  flame.h  flame.inc  flame_a.asm  init.asm  init.inc  int.asm  int.h  int.inc  int.mac  int_a.asm  kb.h  kb.inc  linkfile.lnk  main_c.cc  math.S  math.mac  math_a.asm  math_c.cpp  memory.inc  meshdata.cc  meshdata.h  obj3.pcx  (+28 more)
demo-asm/: Makefile  allocate.inc  bumpmap.asm  bumpmap.inc  data.asm  data.inc  data2.asm  declare.mac  demo.rsp  dma.inc  dos.inc  envmap.raw  flame.asm  flame.inc  format.asm  graymarb.raw  height.raw  init.asm  init.inc  int.asm  int.inc  int.mac  kb.inc  main.asm  main.inc  math.inc  math.mac  memory.inc  object.asm  object.inc  object2.asm  opcode.mac  phong.asm  pit.inc  pmode.asm  pmode.inc  sb.mac  smoke.asm  smoke.inc  stcsmoke.raw  (+16 more)
geom/: .cdtbuild  .cproject  .project  .project_initial  cartesian_vector.h
geom-tests/: .cdtbuild_initial  .cdtproject  .cproject  .project  .project_initial  cartesian_vector.h  cartesian_vector_ops.h  cartesian_vector_test.h  geom.h  numeric_ops.h  tests.cc
image/: .cdtbuild  .cproject  .project  .project_initial  assertion_error.cc  assertion_error.h  color.h  color_detail.h  connected_components.h  connected_components_detail.h  connected_components_test.h  disjoint_set.h  jpeg_error.h  jpeg_reader.cc  jpeg_reader.h  jpeg_writer.cc  jpeg_writer.h  system_error.cc  system_error.h
image-tests/: .cdtbuild  .cdtproject  .cproject  .project  .project_initial  connected_components_test.h  jpeg_test.h  main.cc
models/: a-c.3ds  a-c.asc  a-c.asm  demo.3ds  duck.asc  elus.3ds  obj1.asc  obj10.asc  obj10.asm  obj11.asc  obj11.asm  obj12.asc  obj12.asm  obj2.asc  obj2.asm  obj3.asc  obj3.asm  obj4.asc  obj4.asm  obj5.asc  obj5.asm  obj6.asc  obj6.asm  obj7.asc  obj7.asm  obj8.asc  obj8.asm  obj9.asc  obj9.asm  rock.3ds  rock.asc  rock2.asc  s-t.3ds  s-t.asc  s-t.asm  sphere.3ds  t-i.3ds  t-i.asc  t-i.asm  yinyang.3ds  (+4 more)
phong/: a-c.asm  data.asm  declare.mac  dos.asm  dos.inc  duck.asm  envmap.raw  flame.asm  flame.inc  graymarb.raw  init.asm  int.asm  int.inc  int.mac  kb.inc  link.bat  main.asm  make.bat  math.asm  math.mac  memory.inc  misc.asm  misc.inc  object.inc  pit.inc  pm.inc  pmode.asm  polygon.asm  polygon.inc  project.inc  rotate.asm  s-t.asm  (+14 more)
(+207 files in other folders)
