MAINTAINERCLEANFILES = autom4te.cache Makefile.in
SUBDIRS                 = private

noinst_HEADERS = \
   slider_controller.h \
   gtkpixscrollbar.h \
   generic_motion_feedback.h \
   gtk_ui.h \
   prompter.h \
   hexentry.h \
   spinner.h \
   choice.h \
   gtkmarkedcurve.h \
   pix.h \
   shaped_window.h \
   gdkutils.h \
   gtkutils.h \
   gtkrgb.h \
   utils.h \
   pixmap_button.h \
   textviewer.h \
   gtk_ellipsoid.h \
   gtktransparency.h \
   popup.h \
   version.h \
   gtkdatabox.h \
   motionfeedback.h \
   popup_selector.h \
   gtklevelhold.h \
   pb_from_button.h \
   selector.h \
   transparency.h \
   marked_curve.h \
   levelhold.h \
   rgb.h \
   auto_spin.h \
   led.h \
   click_box.h \
   databox.h
