MAINTAINERCLEANFILES = autom4te.cache Makefile.in

noinst_HEADERS = \
   mmc.h \
   types.h \
   port.h \
   parser.h \
   channel.h \
   factory.h \
   manager.h \
   port_request.h \
   controllable.h \
   alsa_rawmidi.h \
   oss_rawmidi.h \
   irix_rawmidi.h \
   solaris_rawmidi.h \
   nullmidi.h \
   fd_midiport.h \
   fifomidi.h \
   version.h
