MAINTAINERCLEANFILES = autom4te.cache Makefile.in

noinst_HEADERS = \
   pthread_utils.h \
   mountpoint.h \
   undo.h \
   cycles.h \
   fastlog.h \
   lockmonitor.h \
   failed_constructor.h \
   atomic.h \
   abstract_ui.h \
   basename.h \
   rcpointer.h \
   strsub.h \
   datum.h \
   textreceiver.h \
   ellipsoid.h \
   receiver.h \
   thread.h \
   error.h \
   relation.h \
   thrown_error.h \
   forkexec.h \
   restartable_rw.h \
   touchable.h \
   parser.h \
   platform.h \
   platform_factory.h \
   linux_platform.h \
   irix_platform.h \
   solaris_platform.h \
   pool.h \
   rt.h \
   transmitter.h \
   language_guru.h \
   lock_free_fifo.h \
   pathscanner.h \
   rtthread.h \
   types.h \
   position.h \
   selectable.h \
   unescape.h \
   precision_timer.h \
   stl_delete.h \
   version.h \
   pthread_spinlock.h \
   ringbuffer.h \
   scale.h \
   stl_functors.h \
   xml++.h
